[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Weapon/Weapon.gd" type="Script" id=2]

[node name="Weapon" type="Node2D"]
script = ExtResource( 2 )
Bullet = ExtResource( 1 )

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( 40, 0 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 51, 0 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
